--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,6 @@
 <h1><%= @student.to_s %></h1>
+
+<label>Status: </label>
+<div style="color: blue; display: inline">
+  This student is currently <%= @status %>.
+</div>
