--- a/app/views/students/activate.html.erb
+++ b/app/views/students/activate.html.erb
@@ -1,6 +1,6 @@
 <% if @student.active %>
   <% @student.active = false %>
-  <% @student.save %>
+  <%# <% @student.save %> %>
   <% else %>
   <% @student.active = true %>
 <% end %>
